test/features/errors/semantic/e1069_mismatched_binding.spl
# E1069: Mismatched Binding

Feature: E1069 - Variable Binding Type Mismatch
  As a Simple compiler
  I want to detect mismatched binding types
  So that binding types are consistent

  Background:
    Given I have the Simple compiler

  Scenario: Binding type mismatch in pattern
    When I compile:
      '''
      fn test():
        match value:
          Some(x: i32) | None(x: String):  # Error: x has different types
            print(x)
      '''
    Then I should see error E1069
    And the error message should be "variable binding type mismatch"
    And the label should indicate "binding type mismatch"
    And the help should suggest "ensure binding types are consistent"

  Scenario: Valid consistent bindings
    When I compile:
      '''
      fn test():
        match value:
          Some(x) | None:  # OK: x only in first arm
            print("matched")
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        match value:
          Some(x: i32) | None(x: String):
            print(x)
      '''
    Then I should see error E1069
    And the error message should contain "바인딩 타입 불일치"
